Improve schema documentation

--- a/Overview.html
+++ b/Overview.html
@@ -90,6 +90,13 @@ href="http://dev.w3.org/cvsweb/2011/QT3-test-suite/">http://dev.w3.org/cvsweb/20
 This page provides direct access to the files and it contains instructions on
 how to use CVS to access these files.</p>
 
+<h2>Documentation</h2>
+
+<p>The primary documentation of the test suite is the schema for the catalog and test-set files,
+    which is found at <a href="catalog-schema.xsd">catalog-schema.xsd</a>. If viewed directly in an XSLT-capable browser,
+    the schema is rendered automatically into HTML. In case this mechanism does not work, a pre-rendered version of the HTML
+is at <a href="catalog-schema.html">catalog-schema.html</a>. (In many browsers the pre-rendered form is more readable).</p>
+
 <!--
 
 <p>The zip files above each contain the files contained in the
@@ -262,7 +269,7 @@ XML Query Working Group by:</p>
 <hr />
 <address>
   <a href="http://www.w3.org/Help/Webmaster">Webmaster</a> · Last modified:
-  $Date: 2011/07/28 21:27:42 $ by $Author: jmelton $ 
+  $Date: 2011/08/11 14:04:17 $ by $Author: mkay $ 
 </address>
 
 <p><a rel="Copyright"
