Insert/tweak tags to make it well-formed XML.

--- a/Overview.html
+++ b/Overview.html
@@ -90,7 +90,7 @@ the XSLT Working Group.</p>
 <ul>
 <li>fn: tests of functions in Functions and Operators, one per function, named according to the function</li>
 <li>op: tests of operators in Functions and Operators, one per operator, named according to the operator</li>
-<li>math: tests of the functions in the math namespace<li>
+<li>math: tests of the functions in the math namespace</li>
 <li>map: tests of the facilities in the XSL WG maps proposal (which is not currently part of XPath or XQuery)</li>
 <li>prod: tests of XPath and XQuery language features, named after a production in the XPath/XQuery grammar that
 is most relevant to the test in question (for example CastExpr or CompAttrConstructor)</li>
@@ -111,6 +111,7 @@ catalogs, one per test area, organized in directories as above. There are some a
 <li>tools: contains a miscellany of tools used for preparing or analyzing tests</li>
 <li>drivers: contains a selection of contributed test drivers that may be used as a starting point
 for writing new test drivers</li>
+</ul>
 
 
 <p>Implementors are encouraged 1) to write a harness for this test suite and to
@@ -159,7 +160,7 @@ This page provides the ability to view individual files.</p>
 <p>If you want to get the latest version of the test suite, but don't intend to make any contributions,
 you can use anonymous CVS to check the whole suite out into your local filestore. Use the
 CVS repository name <code>:pserver:anonymous@dev.w3.org:/sources/public</code>, password <code>anonymous</code>,
-and the module name <code>2011/QT3-test-suite</code>.
+and the module name <code>2011/QT3-test-suite</code>.</p>
 
 <p>To work on the test suite you will need to get read-write access to the W3C CVS repository. Official
 information on how to do this is at <a href="https://www.w3.org/Project/CVSdoc/">https://www.w3.org/Project/CVSdoc/</a>;
@@ -184,6 +185,7 @@ Use the command line if you're feeling macho; use Emacs if you are one of the fa
 may also have a CVS client built in, though the number is declining as CVS is now considered obsolescent.</p>
 
 <p>Other guides you may find useful are Andrew Eisenberg's at <a href="https://lists.w3.org/Archives/Member/w3c-xml-query-wg/2006Sep/0032.html">https://lists.w3.org/Archives/Member/w3c-xml-query-wg/2006Sep/0032.html</a>
+</p>
 
 <p>If you are new to CVS, here are some explanations of key terms:</p>
 
@@ -402,7 +404,7 @@ XML Query Working Group by:</p>
 <hr />
 <address>
   <a href="http://www.w3.org/Help/Webmaster">Webmaster</a> · Last modified:
-  $Date: 2011/12/16 14:38:15 $ by $Author: mkay $ 
+  $Date: 2012/01/02 01:37:22 $ by $Author: mdyck $ 
 </address>
 
 <p><a rel="Copyright"
