--- a/Overview.html
+++ b/Overview.html
@@ -47,9 +47,9 @@ href="http://www.w3.org/XML/Query/">XML Query</a></p>
 
 <p>XQuery 3.0 is (for most purposes) a superset of XPath 3.0, with the exception of the namespace
 axis. As such, this test suite tests all of XPath 3.0. These XPath
-3.0 test cases are identified in the test suite catalog.</p>
+3.0 test cases are identified as such in the test suite catalog.</p>
 
-<p>Very many of the tests are converted automatically from tests in the older XQuery Test Suite.
+<p>Very many of the tests were converted automatically from tests in the older XQuery Test Suite.
 There are several changes in approach:</p>
 
 <ol>
@@ -60,7 +60,7 @@ comparing serialized output of a query, it is now possible to make an arbitrary 
 of assertions about the result. This gives much greater flexibility in handling queries
 where aspects of the result are implementation defined (for example, the order of items
 in the result)</li>
-<li>the dependencies each the test are more clearly defined in the metadata. Each test refers 
+<li>the dependencies applying to each test are more clearly defined in the metadata. Each test refers 
 to a named environment which in turn defines resources such as source documents and schemas
 used by the test: this allows resources used by multiple tests to be shared, without making
 all resources global. In addition, each test states its assumptions about the specification
@@ -404,7 +404,7 @@ XML Query Working Group by:</p>
 <hr />
 <address>
   <a href="http://www.w3.org/Help/Webmaster">Webmaster</a> · Last modified:
-  $Date: 2012/01/02 01:37:22 $ by $Author: mdyck $ 
+  $Date: 2012/09/17 09:47:41 $ by $Author: mkay $ 
 </address>
 
 <p><a rel="Copyright"
