O'Neil: Bug fix relating to issue #22279

--- a/guide/running.html
+++ b/guide/running.html
@@ -190,33 +190,38 @@ section of the test metadata list features or properties that must be present fo
 <tbody>
 <tr>
   <td>schemaValidation</td>
-  <td>140</td>
+  <td>141</td>
   <td>Requires a query to support the validate expression, and/or to be able to accept source
   documents that have been validated.</td>
 </tr>  
 <tr>
   <td>schemaImport</td>
-  <td>500</td>
+  <td>594</td>
   <td>Requires the query to support an import schema declaration.</td>
 </tr>
 <tr>
   <td>schemaAware</td>
-  <td>50</td>
+  <td>28</td>
   <td>Combination of schemaValidation and schemaImport</td>
 </tr>
 <tr>
   <td>higherOrderFunctions</td>
-  <td>1580</td>
+  <td>1578</td>
   <td>Requires support for higher order functions (XPath or XQuery)</td>
 </tr>
 <tr>
   <td>staticTyping</td>
-  <td>85</td>
+  <td>84</td>
   <td>Requires "pessimistic" static typing</td>
-</tr> 
+</tr>
+<tr>
+  <td>serialization</td>
+  <td>34</td>
+  <td>Requires the query to support serialization.</td>
+</tr>
 <tr>
   <td>infoset-dtd</td>
-  <td>35</td>
+  <td>34</td>
   <td>Requires source documents to be constructed according to the rules for construction from an Infoset,
   in particular recognizing ID/IDREF attributes identified as such in a DTD</td>
 </tr> 
@@ -233,7 +238,7 @@ section of the test metadata list features or properties that must be present fo
 </tr> 
 <tr>
   <td>moduleImport</td>
-  <td>50</td>
+  <td>53</td>
   <td>For XQuery, requires support for import module declaration</td>
 </tr> 
 <tr>
@@ -288,6 +293,8 @@ in the metadata.</p>
 environment; this also gives test drivers the opportunity to save time or memory by building an
 environment once and then re-using it for many tests. Some tests, however, have a unique environment
 which is then described as part of the test case.</p>
+
+<p>The static base URI of the query is always the URI of the file containing the query, which will typically be the catalog file.</p>
 
 <p>Where components of the static or context are not explicitly defined in the test's environment,
 it is generally assumed that they take their default values (as described for example in Appendix C
