Allow feature="typedData"

--- a/guide/running.html
+++ b/guide/running.html
@@ -205,6 +205,11 @@ section of the test metadata list features or properties that must be present fo
   <td>Combination of schemaValidation and schemaImport</td>
 </tr>
 <tr>
+  <td>typedData</td>
+  <td>1</td>
+  <td>Requires the processor to support typed data (but not necessarily schema import or schema validation)</td>
+</tr>
+<tr>
   <td>higherOrderFunctions</td>
   <td>1578</td>
   <td>Requires support for higher order functions (XPath or XQuery)</td>
