--- a/guide/running.html
+++ b/guide/running.html
@@ -236,7 +236,9 @@ section of the test metadata list features or properties that must be present fo
 <tr>
   <td>serialization</td>
   <td>34</td>
-  <td>Requires the query to support serialization.</td>
+  <td>Requires the query to support serialization: specifically, to recognize the serialization parameters defined
+  in the query and to perform serialization using the values of those parameters as defined in the Serialization 3.0
+  specification (this is a stronger requirement than merely providing the XQuery 3.0 serialization feature).</td>
 </tr>
 <tr>
   <td>infoset-dtd</td>
