Fixed a couple of reports to reflect misunderstanding

--- a/ReportingResults/index.html
+++ b/ReportingResults/index.html
@@ -227,10 +227,7 @@
             </blockquote>
             <h3 xmlns="">collection-stability</h3>
             <blockquote xmlns="">
-               <p><a href="dependency/2p1.html">collection-stability</a><i> not satisfied </i>(2 tests)
-               </p>
-               <p style="color:red">Two tests were
-                  passed by no implementations
+               <p><a href="dependency/2p1.html">collection-stability</a><i> satisfied </i>(28 tests)
                </p>
             </blockquote>
             <h3 xmlns="">default-language</h3>
@@ -377,9 +374,6 @@
             <blockquote xmlns="">
                <p><a href="dependency/19p1.html">xml-version=1.0</a><i> satisfied </i>(11 tests)
                </p>
-               <p style="color:red">One test was
-                  passed by no implementations
-               </p>
             </blockquote>
             <blockquote xmlns="">
                <p><a href="dependency/19p2.html">xml-version=1.1</a><i> satisfied </i>(14 tests)
@@ -387,9 +381,6 @@
             </blockquote>
             <blockquote xmlns="">
                <p><a href="dependency/19p3.html">xml-version=1.0:4-</a><i> satisfied </i>(2 tests)
-               </p>
-               <p style="color:red">Two tests were
-                  passed by only one implementation
                </p>
             </blockquote>
             <blockquote xmlns="">
