--- a/guide/running.html
+++ b/guide/running.html
@@ -214,11 +214,6 @@ section of the test metadata list features or properties that must be present fo
   <td>Requires the query to support an import schema declaration.</td>
 </tr>
 <tr>
-  <td>schemaAware</td>
-  <td>28</td>
-  <td>Combination of schemaValidation and schemaImport</td>
-</tr>
-<tr>
   <td>typedData</td>
   <td>1</td>
   <td>Requires the processor to support typed data (but not necessarily schema import or schema validation)</td>
@@ -276,6 +271,26 @@ section of the test metadata list features or properties that must be present fo
   <td>directory-as-collation-uri</td>
   <td>1</td>
   <td>Requires an implementation to recognize a file:/// URL identifying a directory as a collection URI</td>
+</tr> 
+<tr>
+  <td>fn-transform-XSLT30</td>
+  <td>10</td>
+  <td>Indicates that the test uses an fn:transform() call which requires an XSLT 3.0 processor</td>
+</tr>  
+<tr>
+  <td>fn-format-integer-CLDR</td>
+  <td>10</td>
+  <td>Indicates that the test uses an fn:format-integer call which uses CLDR numbering scheme names, e.g. <code>-wo(%spellout-ordinal)</code></td>
+</tr>  
+<tr>
+  <td>non_empty_sequence_collection</td>
+  <td>21</td>
+  <td>Indicates that the test needs the default collection to be something other than an empty sequence</td>
+</tr>  
+<tr>
+  <td>non_unicode_codepoint_collation</td>
+  <td>11</td>
+  <td>Indicates that the test uses a collation URI other than those which the specification requires every processor to support</td>
 </tr>  
 </tbody>
 </table>
