Additional named features

--- a/guide/running.html
+++ b/guide/running.html
@@ -271,12 +271,22 @@ section of the test metadata list features or properties that must be present fo
   <td>directory-as-collation-uri</td>
   <td>1</td>
   <td>Requires an implementation to recognize a file:/// URL identifying a directory as a collection URI</td>
-</tr> 
+</tr>  
+<tr>
+  <td>fn-transform-XSLT</td>
+  <td>80</td>
+  <td>Indicates that the test uses an fn:transform() call which requires an XSLT processor</td>
+</tr>
 <tr>
   <td>fn-transform-XSLT30</td>
   <td>10</td>
   <td>Indicates that the test uses an fn:transform() call which requires an XSLT 3.0 processor</td>
-</tr>  
+</tr>   
+<tr>
+  <td>fn-load-xquery-module</td>
+  <td>65</td>
+  <td>Indicates that the test uses an fn:load-xquery-module() call which requires an XQuery processor which supports the Module Feature</td>
+</tr>
 <tr>
   <td>fn-format-integer-CLDR</td>
   <td>10</td>
