Update to the QT3 test suit reports

--- a/ReportingResults31/index.html
+++ b/ReportingResults31/index.html
@@ -95,7 +95,7 @@
             </table>
          </blockquote>
       </blockquote>
-      <blockquote><b>Sub-Sections:</b><br></br><a href="#optFeatures">Optional Features</a> | <a href="#optComboFeatures">Combination of Optional Features</a> | <a href="#spec31Facilities">New 3.1 Specification Facilities</a></blockquote>
+      <blockquote><b>Sub-Sections:</b><br></br><a href="#optFeatures">Results for Optional Features</a> | <a href="#optComboFeatures">Results for Optional Features in Combination</a> | <a href="#spec31Facilities">New 3.1 Specification Facilities</a></blockquote>
       <blockquote>
          <h2><a name="optFeatures">Results for Optional Features</a></h2> (<a href="#top">Top of page</a>)
          
