As proposed in bug 29621

--- a/guide/running.html
+++ b/guide/running.html
@@ -306,9 +306,10 @@ section of the test metadata list features or properties that must be present fo
     <td>simple-uca-fallback</td>
     <td>50</td>
     <td>Indicates that the test uses a UCA collation URI with the option fallback=yes (or fallback omitted), 
-    and the test results assume that the implementation
-    falls back to a "sensible" default if UCA collation is not supported. The only assumptions made about what constitutes a "sensible"
-    default are that the sequences 0-9, a-z, and A-Z are collated as in codepoint collation; the strings to be sorted will not contain
+      and the test results assume that the implementation falls back to a "sensible" default if UCA collation is not supported. 
+     The only assumptions made about what constitutes a "sensible" default are that the sequences 0-9, a-z, and A-Z are collated 
+     as in codepoint collation, and the option "strength=secondary" indicates case-blind matching of a-z with A-Z. 
+     The strings to be sorted will not contain
     any characters outside these ranges, and will not require characters in one of these ranges to be compared with characters in another.
     For example, a sensible default would sort "abc" before "def"; a fallback collation that sorted "def" before "abc", while legal
     according to the language specification, would not satisfy this dependency.</td>
